# GS-codec

./: CMakeLists.txt  README.md
include/: GaussianCodec.hpp  GaussianFrame.hpp
src/: GaussianCodec.cpp  GaussianFrame.cpp  main.cpp
